--- a/src/lib/styles/colors/mods/light.css
+++ b/src/lib/styles/colors/mods/light.css
@@ -1,7 +1,5 @@
-/* Aliases  */
+/* Maping.Light v2.1 */
 [data-theme="light"] {
-
-  /* Maping.Light v2.0 */
   --border-presentation-action-disabled: var(
     --border-presentation-light-action-disabled
   );
@@ -78,29 +76,29 @@
   --background-system-state-negative: var(
     --background-system-light-state-negative
   );
-  --border-system-action-hover-primary: var(
-    --border-system-light-action-hover-primary
+  --border-system-action-primary-hover: var(
+    --border-system-light-action-primary-hover
   );
-  --background-system-action-hover-primary: var(
-    --background-system-light-action-hover-primary
+  --background-system-action-primary-hover: var(
+    --background-system-light-action-primary-hover
   );
-  --content-system-action-hover-primary: var(
-    --content-system-light-action-hover-primary
+  --content-system-action-primary-hover: var(
+    --content-system-light-action-primary-hover
   );
-  --background-system-action-selected-primary: var(
-    --background-system-light-action-selected-primary
+  --background-system-action-primary-selected: var(
+    --background-system-light-action-primary-selected
   );
-  --background-system-action-selected-secondray: var(
-    --background-system-light-action-selected-secondray
+  --background-system-action-secondray-selected: var(
+    --background-system-light-action-secondray-selected
   );
-  --background-system-action-hover-tertiary: var(
-    --background-system-light-action-hover-tertiary
+  --background-system-action-tertiary-hover: var(
+    --background-system-light-action-tertiary-hover
   );
-  --content-system-action-hover-secondary: var(
-    --content-system-light-action-hover-secondary
+  --content-system-action-secondary-hover: var(
+    --content-system-light-action-secondary-hover
   );
-  --border-system-action-hover-secondary: var(
-    --border-system-light-action-hover-secondary
+  --border-system-action-secondary-hover: var(
+    --border-system-light-action-secondary-hover
   );
   --border-system-global-sidebar-list-border: var(
     --border-system-light-global-sidebar-list-border
@@ -145,13 +143,13 @@
   --border-presentation-table-selected: var(
     --border-presentation-light-table-selected
   );
-  --content-presentation-action-hover-information: var(
-    --content-presentation-light-action-hover-information
+  --content-presentation-action-information-hover: var(
+    --content-presentation-light-action-information-hover
   );
-  --content-presentation-action-hover-negative: var(
-    --content-presentation-light-action-hover-negative
+  --content-presentation-action-negative-hover: var(
+    --content-presentation-light-action-negative-hover
   );
-  --background-presentation-action-hovercontstyle: var(
+  --background-presentation-action-contstyle-hover: var(
     --background-presentation-light-action-hovercontstyle
   );
   --background-presentation-table-row-hover: var(
@@ -178,11 +176,11 @@
   --border-presentation-table-header: var(
     --border-presentation-light-table-header
   );
-  --background-presentation-tab-hover-topbar: var(
-    --background-presentation-light-tab-hover-topbar
+  --background-presentation-tab-topbar-hover: var(
+    --background-presentation-light-tab-topbar-hover
   );
-  --background-presentation-tab-selected-topbar: var(
-    --background-presentation-light-tab-selected-topbar
+  --background-presentation-tab-topbar-selected: var(
+    --background-presentation-light-tab-topbar-selected
   );
   --content-presentation-tab-action-hover: var(
     --content-presentation-light-tab-action-hover
@@ -190,8 +188,8 @@
   --content-presentation-tab-action-selected: var(
     --content-presentation-light-tab-action-selected
   );
-  --border-presentation-tab-hover-topbar: var(
-    --border-presentation-light-tab-hover-topbar
+  --border-presentation-tab-topbar-hover: var(
+    --border-presentation-light-tab-topbar-hover
   );
   --background-presentation-badge-green: var(
     --background-presentation-light-badge-green
@@ -299,11 +297,11 @@
   --background-system-body-tertiary: var(
     --background-system-light-body-tertiary
   );
-  --background-system-action-hover-secondary: var(
-    --background-system-light-action-hover-secondary
+  --background-system-action-secondary-hover: var(
+    --background-system-light-action-secondary-hover
   );
-  --background-presentation-tab-default-topbar: var(
-    --background-presentation-light-tab-default-topbar
+  --background-presentation-tab-topbar-primary: var(
+    --background-presentation-light-tab-topbar-primary
   );
   --background-system-action-field-desabled: var(
     --background-system-light-action-field-desabled
@@ -353,8 +351,8 @@
   --background-presentation-state-information-secondary: var(
     --background-presentation-light-state-information-secondary
   );
-  --content-presentation-action-hover-success: var(
-    --content-presentation-light-action-hover-success
+  --content-presentation-action-success-hover: var(
+    --content-presentation-light-action-success-hover
   );
   --background-system-badge-purple: var(--background-system-light-badge-purple);
   --background-system-badge-red: var(--background-system-light-badge-red);
@@ -398,17 +396,17 @@
   --background-presentation-form-tabs: var(
     --background-presentation-light-form-tabs
   );
-  --background-presentation-tab-default-sidebar: var(
-    --background-presentation-light-tab-default-sidebar
+  --background-presentation-tab-sidebar-primary: var(
+    --background-presentation-light-tab-sidebar-primary
   );
-  --background-presentation-tab-hover-sidebar: var(
-    --background-presentation-light-tab-hover-sidebar
+  --background-presentation-tab-sidebar-hover: var(
+    --background-presentation-light-tab-sidebar-hover
   );
-  --background-presentation-tab-selected-sidebar: var(
-    --background-presentation-light-tab-selected-sidebar
+  --background-presentation-tab-sidebar-selected: var(
+    --background-presentation-light-tab-sidebar-selected
   );
-  --border-presentation-tab-default-sidebar: var(
-    --border-presentation-light-tab-default-sidebar
+  --border-presentation-tab-sidebar-primary: var(
+    --border-presentation-light-tab-sidebar-primary
   );
   --content-presentation-stepper-selected: var(
     --content-presentation-light-stepper-selected
@@ -504,5 +502,194 @@
   );
   --background-presentation-form-searchbar-hovermusk: var(
     --background-presentation-light-form-searchbar-hovermusk
+  );
+  --background-presentation-cardbutton-blue-primary: var(
+    --background-presentation-light-cardbutton-blue-primary
+  );
+  --background-presentation-cardbutton-orange-primary: var(
+    --background-presentation-light-cardbutton-orange-primary
+  );
+  --background-presentation-cardbutton-red-primary: var(
+    --background-presentation-light-cardbutton-red-primary
+  );
+  --background-presentation-cardbutton-green-primary: var(
+    --background-presentation-light-cardbutton-green-primary
+  );
+  --background-presentation-cardbutton-rose-primary: var(
+    --background-presentation-light-cardbutton-rose-primary
+  );
+  --background-presentation-cardbutton-yellow-primary: var(
+    --background-presentation-light-cardbutton-yellow-primary
+  );
+  --background-presentation-cardbutton-gray-primary: var(
+    --background-presentation-light-cardbutton-gray-primary
+  );
+  --background-presentation-cardbutton-blue-hover: var(
+    --background-presentation-light-cardbutton-blue-hover
+  );
+  --background-presentation-cardbutton-orange-hover: var(
+    --background-presentation-light-cardbutton-orange-hover
+  );
+  --background-presentation-cardbutton-red-hover: var(
+    --background-presentation-light-cardbutton-red-hover
+  );
+  --background-presentation-cardbutton-green-hover: var(
+    --background-presentation-light-cardbutton-green-hover
+  );
+  --background-presentation-cardbutton-rose-hover: var(
+    --background-presentation-light-cardbutton-rose-hover
+  );
+  --background-presentation-cardbutton-yellow-hover: var(
+    --background-presentation-light-cardbutton-yellow-hover
+  );
+  --background-presentation-cardbutton-gray-hover: var(
+    --background-presentation-light-cardbutton-gray-hover
+  );
+  --background-presentation-cardbutton-green-pressed: var(
+    --background-presentation-light-cardbutton-green-pressed
+  );
+  --background-presentation-cardbutton-rose-pressed: var(
+    --background-presentation-light-cardbutton-rose-pressed
+  );
+  --background-presentation-cardbutton-yellow-pressed: var(
+    --background-presentation-light-cardbutton-yellow-pressed
+  );
+  --background-presentation-cardbutton-gray-pressed: var(
+    --background-presentation-light-cardbutton-gray-pressed
+  );
+  --background-presentation-cardbutton-blue-pressed: var(
+    --background-presentation-light-cardbutton-blue-pressed
+  );
+  --background-presentation-cardbutton-orange-pressed: var(
+    --background-presentation-light-cardbutton-orange-pressed
+  );
+  --background-presentation-cardbutton-red-pressed: var(
+    --background-presentation-light-cardbutton-red-pressed
+  );
+  --content-presentation-cardbutton-blue-icon: var(
+    --content-presentation-light-cardbutton-blue-icon
+  );
+  --content-presentation-cardbutton-blue-header: var(
+    --content-presentation-light-cardbutton-blue-header
+  );
+  --content-presentation-cardbutton-blue-subtext: var(
+    --content-presentation-light-cardbutton-blue-subtext
+  );
+  --content-presentation-cardbutton-orange-icon: var(
+    --content-presentation-light-cardbutton-orange-icon
+  );
+  --content-presentation-cardbutton-orange-header: var(
+    --content-presentation-light-cardbutton-orange-header
+  );
+  --content-presentation-cardbutton-orange-subtext: var(
+    --content-presentation-light-cardbutton-orange-subtext
+  );
+  --content-presentation-cardbutton-red-icon: var(
+    --content-presentation-light-cardbutton-red-icon
+  );
+  --content-presentation-cardbutton-red-header: var(
+    --content-presentation-light-cardbutton-red-header
+  );
+  --content-presentation-cardbutton-red-subtext: var(
+    --content-presentation-light-cardbutton-red-subtext
+  );
+  --content-presentation-cardbutton-green-icon: var(
+    --content-presentation-light-cardbutton-green-icon
+  );
+  --content-presentation-cardbutton-green-header: var(
+    --content-presentation-light-cardbutton-green-header
+  );
+  --content-presentation-cardbutton-green-subtext: var(
+    --content-presentation-light-cardbutton-green-subtext
+  );
+  --content-presentation-cardbutton-rose-header: var(
+    --content-presentation-light-cardbutton-rose-header
+  );
+  --content-presentation-cardbutton-rose-subtext: var(
+    --content-presentation-light-cardbutton-rose-subtext
+  );
+  --content-presentation-cardbutton-rose-icon: var(
+    --content-presentation-light-cardbutton-rose-icon
+  );
+  --content-presentation-cardbutton-yellow-icon: var(
+    --content-presentation-light-cardbutton-yellow-icon
+  );
+  --content-presentation-cardbutton-yellow-header: var(
+    --content-presentation-light-cardbutton-yellow-header
+  );
+  --content-presentation-cardbutton-yellow-subtext: var(
+    --content-presentation-light-cardbutton-yellow-subtext
+  );
+  --content-presentation-cardbutton-gray-icon: var(
+    --content-presentation-light-cardbutton-gray-icon
+  );
+  --content-presentation-cardbutton-gray-header: var(
+    --content-presentation-light-cardbutton-gray-header
+  );
+  --content-presentation-cardbutton-gray-subtext: var(
+    --content-presentation-light-cardbutton-gray-subtext
+  );
+  --border-presentation-cardbutton-blue-hover: var(
+    --border-presentation-light-cardbutton-blue-hover
+  );
+  --border-presentation-cardbutton-orange-hover: var(
+    --border-presentation-light-cardbutton-orange-hover
+  );
+  --border-presentation-cardbutton-red-hover: var(
+    --border-presentation-light-cardbutton-red-hover
+  );
+  --border-presentation-cardbutton-green-hover: var(
+    --border-presentation-light-cardbutton-green-hover
+  );
+  --border-presentation-cardbutton-rose-hover: var(
+    --border-presentation-light-cardbutton-rose-hover
+  );
+  --border-presentation-cardbutton-yellow-hover: var(
+    --border-presentation-light-cardbutton-yellow-hover
+  );
+  --border-presentation-cardbutton-gray-hover: var(
+    --border-presentation-light-cardbutton-gray-hover
+  );
+  --background-presentation-cardbutton-purple-primary: var(
+    --background-presentation-light-cardbutton-purple-primary
+  );
+  --background-presentation-cardbutton-ocean-primary: var(
+    --background-presentation-light-cardbutton-ocean-primary
+  );
+  --background-presentation-cardbutton-purple-hover: var(
+    --background-presentation-light-cardbutton-purple-hover
+  );
+  --background-presentation-cardbutton-ocean-hover: var(
+    --background-presentation-light-cardbutton-ocean-hover
+  );
+  --background-presentation-cardbutton-purple-pressed: var(
+    --background-presentation-light-cardbutton-purple-pressed
+  );
+  --background-presentation-cardbutton-ocean-pressed: var(
+    --background-presentation-light-cardbutton-ocean-pressed
+  );
+  --content-presentation-cardbutton-purple-icon: var(
+    --content-presentation-light-cardbutton-purple-icon
+  );
+  --content-presentation-cardbutton-purple-header: var(
+    --content-presentation-light-cardbutton-purple-header
+  );
+  --content-presentation-cardbutton-purple-subtext: var(
+    --content-presentation-light-cardbutton-purple-subtext
+  );
+  --content-presentation-cardbutton-ocean-icon: var(
+    --content-presentation-light-cardbutton-ocean-icon
+  );
+  --content-presentation-cardbutton-ocean-header: var(
+    --content-presentation-light-cardbutton-ocean-header
+  );
+  --content-presentation-cardbutton-ocean-subtext: var(
+    --content-presentation-light-cardbutton-ocean-subtext
+  );
+  --border-presentation-cardbutton-purple-hover: var(
+    --border-presentation-light-cardbutton-purple-hover
+  );
+  --border-presentation-cardbutton-ocean-hover: var(
+    --border-presentation-light-cardbutton-ocean-hover
   );
 }
