--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: 'SF-Pro';
-    src: url(./SF-Pro.woff2) format('woff2');
+  font-family: "SF-Pro";
+  src: url(./SF-Pro.woff2) format("woff2");
 }
