--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,7 @@ body {
   align-items: center;
   height: 100vh;
   padding: 10px;
-  /* background-color: black; */
-  /*     background-color: rgb(192, 192, 192);
- */
+  background-color: black;
 }
 
 .app {
