--- a/src/lib/components/base/dropDowns/dropdownMenu/style.scss
+++ b/src/lib/components/base/dropDowns/dropdownMenu/style.scss
@@ -1,29 +1,30 @@
 .drop-down-menu {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    padding: var(--Space-1, 4px) !important;
-    border-radius: 8px;
-    max-height: 200px;
-    overflow: scroll;
-    margin: 0 !important;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  padding: var(--Space-1, 4px) !important;
+  border-radius: 8px;
+  max-height: 200px;
+  overflow: scroll;
+  margin: 0 !important;
+  transition: all 300ms ease-in-out;
 
-    &::-webkit-scrollbar {
-        display: none;
-    }
-
-    transition: all 300ms ease-in-out;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .drop-down-menu-Presentation-Style {
-    border: 1px solid var(--border-presentation-global-primary);
-    background: var(--background-presentation-form-base);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.40), 0px 4px 4px 0px rgba(0, 0, 0, 0.20);
+  border: 1px solid var(--border-presentation-global-primary);
+  background: var(--background-presentation-form-base);
+  box-shadow:
+    0px 0px 10px 0px rgba(0, 0, 0, 0.4),
+    0px 4px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
 .drop-down-menu-System-Style {
-    border: 1px solid var(--border-system-global-secondary);
-    background: var(--background-system-body-primary);
-    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+  border: 1px solid var(--border-system-global-secondary);
+  background: var(--background-system-body-primary);
+  box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
 }
