--- a/src/lib/components/base/fields/labelLessInput/_variants.scss
+++ b/src/lib/components/base/fields/labelLessInput/_variants.scss
@@ -1,98 +1,101 @@
-@import '@/styles/typography';
+@import "@/styles/typography";
 
 .glare-input-labelLess-field-focus {
-
-    .input-container {
-        input {
-            border-color: var(--border-presentation-state-focus) !important;
-        }
-
-        .glare-input-icon {
-            color: black;
-        }
+  .input-container {
+    input {
+      border-color: var(--border-presentation-state-focus) !important;
     }
 
+    .glare-input-icon {
+      color: black;
+    }
+  }
+
+  & {
     border-color: var(--border-presentation-state-focus) !important;
-    box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
+    box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.3);
     color: var(--content-presentation-action-light-primary) !important;
+  }
 }
 
 /* negative */
 
 .glare-input-labelLess-field-negative {
-    border-color: var(--border-presentation-state-negative) !important;
-    caret-color: var(--border-presentation-state-negative);
+  border-color: var(--border-presentation-state-negative) !important;
+  caret-color: var(--border-presentation-state-negative);
 
-    &:hover {
-        border-color: var(--border-presentation-state-negative) !important;
-    }
+  &:hover {
+    border-color: var(--border-presentation-state-negative) !important;
+  }
 }
 
 .glare-input-labelLess-field-disabled {
+  border-color: var(--border-presentation-action-disabled) !important;
+  background-color: var(--background-presentation-action-disabled) !important;
+
+  &:hover {
     border-color: var(--border-presentation-action-disabled) !important;
     background-color: var(--background-presentation-action-disabled) !important;
-
-    &:hover {
-        border-color: var(--border-presentation-action-disabled) !important;
-        background-color: var(--background-presentation-action-disabled) !important;
-    }
+  }
 }
 
-.glare-input-labelLess-has-badgesChildren {}
+.glare-input-labelLess-has-badgesChildren {
+}
 
 /* input sizes */
 
 .glare-input-labelLess-size-L {
-    height: 40px;
+  height: 40px;
 
-    .input-container {
-        .glare-input-icon {
-            font-size: 16px;
-        }
+  .input-container {
+    .glare-input-icon {
+      font-size: 16px;
     }
+  }
 }
 
 .glare-input-labelLess-size-M {
-    height: 40px;
+  height: 40px;
 
-    .input-container {
-        .glare-input-icon {
-            font-size: 16px;
-        }
+  .input-container {
+    .glare-input-icon {
+      font-size: 16px;
     }
+  }
 }
 
 .glare-input-labelLess-size-S {
-    height: 30px;
+  height: 30px;
 
-    .input-container {}
+  .input-container {
+  }
 }
 
 /* system style colors theme */
 
 .glare-input-labelLess-system-style {
-    border: 1px solid var(--border-system-global-primary);
-    background-color: var(--black-alpha-20);
+  border: 1px solid var(--border-system-global-primary);
+  background-color: var(--black-alpha-20);
 
-    input {
-        color: white !important;
-        caret-color: var(--content-presentation-action-hover-information);
-    }
+  input {
+    color: white !important;
+    caret-color: var(--content-presentation-action-hover-information);
+  }
 
-    &:hover {
-        background-color: var(--purple-alpha-10) !important;
-        border: 1px solid var(--border-system-action-hover-primary) !important;
-    }
+  &:hover {
+    background-color: var(--purple-alpha-10) !important;
+    border: 1px solid var(--border-system-action-hover-primary) !important;
+  }
 
-    label {
-        color: white !important;
-    }
+  label {
+    color: white !important;
+  }
 }
 
 .glare-input-labelLess-style-fucus {
-    .glare-input-icon {
-        i {
-            color: white;
-        }
+  .glare-input-icon {
+    i {
+      color: white;
     }
+  }
 }
