--- a/src/lib/components/base/fields/labelLessInput/style.scss
+++ b/src/lib/components/base/fields/labelLessInput/style.scss
@@ -1,86 +1,83 @@
-@import '@/styles/typography';
-
+@import "@/styles/typography";
 
 .glare-input-labelLess-field-wrapper {
-    width: 100%;
-    position: relative;
-    border: 1px solid var(--border-presentation-action-primary);
-    border-radius: var(--Radius-2-max, 4px);
-    padding: 3px;
-    background-color: var(--background-presentation-form-field-primary);
-    transition: all 150ms ease-in-out;
+  width: 100%;
+  position: relative;
+  border: 1px solid var(--border-presentation-action-primary);
+  border-radius: var(--Radius-2-max, 4px);
+  padding: 3px;
+  background-color: var(--background-presentation-form-field-primary);
+  transition: all 150ms ease-in-out;
 
-    &:hover {
-        border-color: var(--border-presentation-action-hover);
-        box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
+  &:hover {
+    border-color: var(--border-presentation-action-hover);
+    box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.3);
+  }
+
+  .glare-input-labelLess-field-inner-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: scroll;
+    height: 100%;
+    transition: all 300ms ease-in-out;
+
+    .input-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+      flex: 1;
+      min-width: 150px;
+
+      .glare-input-label-less-field {
+        width: 100%;
+        color: var(--content-presentation-action-light-primary);
+        border: none;
+        outline: none;
+        transition: all 250ms ease-in-out;
+        background: inherit;
+        caret-color: var(
+          --content-presentation-action-hover-information
+        ) !important;
+        @include Body-typography-Small-Regular;
+
+        &::placeholder {
+          color: var(--content-presentation-action-light-secondary);
+        }
+      }
     }
 
-    .glare-input-labelLess-field-inner-wrapper {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        overflow: scroll;
-        height: 100%;
-        transition: all 300ms ease-in-out;
+    .glare-input-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: fit-content;
+      font-size: 14px;
+      color: #a0a0a0;
+      transition: all 150ms ease-in-out;
+      margin: 0 !important;
 
-        .input-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 4px;
-            flex: 1;
-            min-width: 150px;
-
-            .glare-input-label-less-field {
-                width: 100%;
-                color: var(--content-presentation-action-light-primary);
-                border: none;
-                outline: none;
-                transition: all 250ms ease-in-out;
-                background: inherit;
-                caret-color: var(--content-presentation-action-hover-information) !important;
-                @include Body-typography-Small-Regular;
-
-                &::placeholder {
-                    color: var(--content-presentation-action-light-secondary);
-                }
-            }
-
-        }
-
-
-
-        .glare-input-icon {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: fit-content;
-            font-size: 14px;
-            color: #A0A0A0;
-            transition: all 150ms ease-in-out;
-            margin: 0 !important;
-
-            .glare-input-trailingLabel {
-                @include Labels-typography-Medium-Medium;
-                color: var(--content-presentation-action-light-primary);
-                margin: 0 !important;
-                white-space: nowrap;
-            }
-        }
-
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
-
-        &::-webkit-scrollbar-track {
-            display: none;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            display: none;
-        }
+      .glare-input-trailingLabel {
+        @include Labels-typography-Medium-Medium;
+        color: var(--content-presentation-action-light-primary);
+        margin: 0 !important;
+        white-space: nowrap;
+      }
     }
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    &::-webkit-scrollbar-track {
+      display: none;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      display: none;
+    }
+  }
 }
 
-@import './variants';
+@import "./variants";
