--- a/src/lib/components/base/tooltips/tooltip/style.scss
+++ b/src/lib/components/base/tooltips/tooltip/style.scss
@@ -8,7 +8,7 @@
     gap: 0;
 
     p {
-        padding: var(--Space-1, 4px);
+        padding: var(--space-1, 4px);
         color: var(--content-system-global-primary);
         font-size: 14px;
         font-style: normal;
