--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@ body {
   align-items: center;
   height: 100vh;
   padding: 10px;
-  background-color: rgb(223, 223, 223);
-}
+/*   background-color: rgb(223, 223, 223);
+ */}
 
 .app {
   width: 100%;
