Update dependencies, enhance InputField component, and improve styling
- Added new dependencies: `@radix-ui/react-popover`, `lucide-react`, `tailwind-scrollbar-hide`, and `tailwindcss-animate`.
- Enhanced `InputField` component in `App.tsx` to include an icon and a dropdown list.
- Updated `tailwind.config.js` to include new plugins for animations and scrollbar styling.
- Refactored `Tooltip` component to use `TooltipProvider` for better context management.
- Improved styling in `inputField_v2` and related components for better user experience.

--- a/src/lib/components/base/fields/inputField_v2/style.scss
+++ b/src/lib/components/base/fields/inputField_v2/style.scss
@@ -1,5 +1,10 @@
 @import "@/styles/typography";
 
+
+.input-liner-test {
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, var(--background-presentation-form-field-primary) 28%);
+}
+
 .glare-input-field-wrapper {
   width: 100%;
   position: relative;
@@ -44,9 +49,7 @@
       padding: 0 4px;
       color: var(--content-presentation-action-light-primary);
       @include Body-typography-Small-Regular;
-      caret-color: var(
-        --content-presentation-action-hover-information
-      ) !important;
+      caret-color: var(--content-presentation-action-hover-information) !important;
 
       &::placeholder {
         color: var(--content-presentation-action-light-secondary);
