--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   align-items: center;
   height: 100vh;
   padding: 10px;
-  background-color: #000;
+  background-color: #fff;
 }
 
 .app {
