--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: #000;
 }
 
 .app {
