test and upgrade

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @plugin 'glare-themes';
 @plugin 'glare-torch-mode';
 @plugin 'tailwind-scrollbar-hide';
+@plugin 'tailwindcss-animate';
 
 * {
   box-sizing: border-box;
