--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,14 @@
   box-sizing: border-box;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-transition: "color 1000s ease-out, background-color 1000s ease-out";
+  -webkit-transition-delay: 1000s;
+}
+
 body {
   font-family: "SF-Pro";
   display: flex;
