--- a/lib/components/Slider/styles.css
+++ b/lib/components/Slider/styles.css
@@ -2,48 +2,21 @@
     position: relative;
     display: flex;
     width: 100%;
-    height: 22.2rem;
-    max-width: 30rem;
+    height: 300px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     color: white;
+    scroll-behavior: smooth;
 }
 
-.embla:before,
-.embla:after {
-    position: absolute;
-    left: 0;
-    right: 0;
-    content: '';
-    display: block;
-    height: calc(50% - 32px / 2);
-    z-index: 1;
-    pointer-events: none;
-}
-
-.embla:before {
-    top: -0.5px;
-    border-bottom: 0.5px solid rgba(var(--text-high-contrast-rgb-value), 0.3);
-    background: linear-gradient(to top,
-            rgba(var(--background-site-rgb-value), 0.65) 0%,
-            rgba(var(--background-site-rgb-value), 1) 100%);
-}
-
-.embla:after {
-    bottom: -0.5px;
-    border-top: 0.5px solid rgba(var(--text-high-contrast-rgb-value), 0.3);
-    background: linear-gradient(to bottom,
-            rgba(var(--background-site-rgb-value), 0.65) 0%,
-            rgba(var(--background-site-rgb-value), 1) 100%);
-}
 
 .embla__ios-picker {
     height: 100%;
     display: flex;
     align-items: center;
-    min-width: 50%;
+    width: 90px;
     justify-content: center;
-    line-height: 1;
     font-size: 1.8rem;
 }
 
@@ -52,14 +25,15 @@
     height: 100%;
     overflow: hidden;
     display: flex;
+    justify-content: center;
     align-items: center;
     touch-action: pan-x;
 }
 
 .embla__ios-picker__viewport {
     height: 32px;
-    width: 100%;
-    perspective: 1000px;
+    width: 75px;
+    perspective: 3200px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -82,6 +56,7 @@
     width: 100%;
     transform-style: preserve-3d;
     will-change: transform;
+    scroll-behavior: smooth;
 }
 
 .embla__ios-picker__slide {
